# sbomb

./: AUDIT.md  Dockerfile  INTEGRATIONS.md  INTEROP.md  README.md  ROADMAP.md  SOURCES.md  install.ps1  install.sh  layman.md  pyproject.toml
.github/workflows/: ci.yml  polyglot.yml  ports.yml
demos/: README.md
demos/01-basic/: SCENARIO.md
demos/02-debian-router/: SCENARIO.md
demos/03-alpine-ipcam/: SCENARIO.md
demos/04-busybox-banner/: SCENARIO.md
demos/05-node-gateway/: SCENARIO.md
demos/06-clean-device/: SCENARIO.md
demos/07-custom-vulndb/: SCENARIO.md  vuln-db.json
demos/08-multidistro/: SCENARIO.md
demos/09-feed-enrichment/: SCENARIO.md
deploy/: docker-compose.yml  k8s.yaml
deploy/terraform/: main.tf
docs/: ADVANCED.md  ARCHITECTURE.md  DEPLOY.md  INSTALL.md
examples/: help.txt  version.txt
polyglot/: README.md
polyglot/c/: filesystem_traversal.c
polyglot/cpp/: filesystem_traversal.cpp
polyglot/csharp/: filesystem_traversal.cs
polyglot/go/: binary_identification.go  filesystem_traversal.go
polyglot/java/: filesystem_traversal.java
polyglot/python/: binary_identification.py  filesystem_traversal.py
polyglot/ruby/: filesystem_traversal.rb
polyglot/rust/: binary_identification.rs  filesystem_traversal.rs
ports/: README.md
ports/go/: go.mod  (+3 more)
sbomb/: __init__.py  __main__.py  cli.py  connect.py  core.py  feeds.py  mcp_server.py  vulndb_local.py
scripts/: ports-test.sh
tests/: test_connect.py  test_core_extra.py  test_demos.py  test_feeds.py  test_hardening.py  test_match.py  test_smoke.py  test_vulndb_local.py
(+38 files in other folders)
